implemented day resetting